Update css for real

--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #8a0707;
+  background-color: #016f22;
   color: #ffffff;
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
